--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -3,8 +3,8 @@
 en:
   devise:
     confirmations:
-      confirmed: "Your email address has been successfully confirmed."
-      send_instructions: "You will receive an email with instructions for how to confirm your email address in a few minutes."
+      confirmed: "Your account has been successfully confirmed 😍"
+      send_instructions: "Check your inbox, we sent you an email to confirm your account 🤓"
       send_paranoid_instructions: "If your email address exists in our database, you will receive an email with instructions for how to confirm your email address in a few minutes."
     failure:
       already_authenticated: "You are already signed in."
